# wind-watcher

./: .gitignore  docker-compose.yaml  justfile  objectives.md
docker/: Dockerfile
docker/envs/: database.env
docker/mocks/: Dockerfile
docker/mocks/windguru/: api.py  forecast_spot.json  meta_spot.json  requirements.txt  station_data.json
frontend/: package-lock.json
frontend/pages/: index.tsx  wind.tsx
frontend/pages/knts-chart/: knts-forecasts.tsx
services/forecasts_ingester/: Cargo.toml  Settings.toml
services/forecasts_ingester/migrations/: 20230410000750_forecast.sql
services/forecasts_ingester/src/: config.rs  lib.rs  logging.rs  main.rs  state.rs
services/forecasts_ingester/src/actors/: fetching.rs  ingesting.rs  mod.rs
services/forecasts_ingester/src/actors/messages/: fetching.rs  ingesting.rs  mod.rs
services/forecasts_ingester/src/data_fetcher/: authorization.rs  client.rs  errors.rs  mod.rs  windguru.rs
services/forecasts_ingester/src/data_fetcher/windguru/: forecasts.rs  mod.rs  stations.rs
services/forecasts_ingester/src/data_ingester/: errors.rs  mod.rs  postgres_repository.rs
services/forecasts_ingester/src/types/: mod.rs  windguru.rs
services/forecasts_ingester/src/types/windguru/: forecast.rs  mod.rs  station.rs
services/watcher-settings/: Cargo.toml
services/watcher-settings/migrations/: 20230528074048_1.sql
services/watcher-settings/src/: config.rs  logging.rs  migrator.rs
windudindu/: package.json
