[package]
name = "forecasts_ingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
reqwest = { version = "0.11.16", features = ["cookies", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_with = { version = "2.3.2", features = ["chrono"] }
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[lib]
name="lib"
src="src/lib.rs"
