[package]
name = "forecasts_ingester"
version = "0.1.0"
edition = "2021"
default-run = "forecasts_ingester"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1.0.70"
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
reqwest = { version = "0.11.16", features = ["cookies", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_with = { version = "2.3.2", features = ["chrono"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate"] }
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

aws_lambda_events = { version = "0.7.3", default-features = false, features = ["cloudwatch_events"], optional = true }
lambda_runtime = { version = "0.7"}
thiserror = "1.0.40"

[features]
lambda = ["aws_lambda_events"]


[lib]
name="lib"
src="src/lib.rs"

[[bin]]
name="forecasts_ingester"
path="src/bin/app.rs"

[[bin]]
name="forecasts_ingester_migrator"
path="src/bin/migrator.rs"

[dev-dependencies]
pretty_assertions = "1.3.0"
