[package]
name = "watcher-settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
config = "0.13.3"
serde = { version = "1.0.163", features = ["serde_derive"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.28.2", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[lib]
name="lib"
src="src/lib.rs"

[[bin]]
name="forecasts_ingester_migrator"
path="src/migrator.rs"
